# docs/swagger.json
@@ -884,53 +884,10 @@
         }
       }
     },
-
     "/api/news": {
       "get": {
         "tags": ["News"],
         "summary": "Get news",
-        "parameters": [
-          {
-            "in": "query",
-            "name": "page",
-            "description": "Current page",
-            "schema": {
-              "type": "integer",
-              "example": "1"
-            }
-          },
-          {
-            "in": "query",
-            "name": "limit",
-            "description": "limit of news per page",
-            "schema": {
-              "type": "integer",
-              "example": "6"
-            }
-          }
-        ],
-        "requestBody": {},
-        "responses": {
-          "200": {
-            "description": "Successful operation",
-            "content": {}
-          },
-          "404": {
-            "description": "Not found",
-            "content": {}
-          },
-          "500": {
-            "description": "Server error",
-            "content": {}
-          }
-        }
-      }
-    },
-
-    "/api/news/title": {
-      "get": {
-        "tags": ["News"],
-        "summary": "Get news by title",
         "parameters": [
           {
             "in": "query",
