# routes/newsRouter.js
@@ -3,6 +3,6 @@ const { newsController } = require("../controllers");
 const newsRouter = express.Router();
 
 newsRouter.route("/").get(newsController.getNews);
-newsRouter.route("/title").get(newsController.getNewsByTitle);
+// newsRouter.route("/title").get(newsController.getNewsByTitle);
 
 module.exports = newsRouter;
